--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "Ionic PWA camera no plugins",
+  "short_name": "Ionic PWA camera",
   "start_url": "index.html",
   "display": "standalone",
+  "orientation": "portrait",
   "icons": [{
     "src": "assets/imgs/logo.png",
     "sizes": "512x512",
